--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Adminchowy
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dj6cr60jidIxxSEAiPUM8itKcY5hue6Vx6pLN7S1GNE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://adminchowy.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=adminchowy
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -30,7 +30,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="noreply@adminchowy.test"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
